-
Type:
Bug
-
Status: Resolved
-
Priority:
Blocker
-
Resolution: Fixed
-
Affects Version/s: Impala 3.3.0
-
Fix Version/s: Impala 3.3.0
-
Component/s: Backend
-
Labels:None
-
Epic Color:ghx-label-1
As show in IMPALA-8561, using mtime == -1 as part of cache key may lead to reading stale data. Data cache should probably just skip caching those entries.
- is broken by
-
IMPALA-8341 Data cache for remote reads
-
- Resolved
-
- is related to
-
IMPALA-8561 ScanRanges with mtime=-1 can lead to inconsistent reads when using the file handle cache
-
- Resolved
-